--- a/docs/style.css
+++ b/docs/style.css
@@ -1,62 +1,116 @@
 * {
     box-sizing: border-box;
 }
+
 body {
     background-color: rgb(255, 186, 249);
-    width: 80%;
-    margin: 2% auto;
+    width: 95%;
+    margin: 0;
 }
+
 .fondo {
-    background-image: url("https://www.shutterstock.com/image-vector/big-set-cute-sticker-concept-600nw-2133436391.jpg");
-    height: 50%;
-    padding: 50%;
+    background-image: url(https://i.pinimg.com/736x/4a/a9/bc/4aa9bcaca5f3e0c021282e4f95744fe4.jpg);
+    height: 10px;
+    padding: 20%;
     background-size: cover;
-    text-align: top;
     margin: 0%;
+
 }
+
+h1 {
+    text-align: top;
+}
+
+h2 {
+    margin: 3%;
+}
+
+
+/*imagenes*/
+p {
+    margin-left: 5%;
+}
+
+div {
+    display: inline-block;
+    padding: 0px;
+    text-align: center;
+}
+
+figure {
+    display: inline-block;
+    padding: 5%;
+    border: 5px dotted rgb(172, 108, 247);
+    text-align: center;
+}
+
+figcaption {
+    margin: 40px 100px;
+}
+
+figure:hover {
+    color: rgb(189, 79, 233);
+}
+
+
 
 
 /*tabla */
 table {
     border: 3px solid rgb(247, 146, 163);
     border-collapse: collapse;
+    margin: 0 auto;
+    text-align: center;
 }
-td, th { 
+
+td,
+th {
     border: 5px solid rgb(250, 250, 250);
 }
+
 th {
     background-color: palevioletred;
-    text-align: center; 
+    text-align: center;
     height: 50px;
 }
+
 td {
     text-align: center;
     padding: 0px 0px;
 }
+
 .tata {
     background-color: rgb(252, 91, 126);
 }
+
 .cooky {
     background-color: rgb(247, 170, 217);
 }
-.shooky{
+
+.shooky {
     background-color: rgb(247, 193, 122);
 }
+
 .rj {
     background-color: rgb(243, 226, 237);
 }
+
 .chimmy {
     background-color: rgb(246, 248, 128);
 }
+
 .mang {
     background-color: rgb(241, 128, 236);
 }
+
 .koya {
     background-color: rgb(158, 159, 255);
 }
+
 .junto {
     background-color: rgb(247, 223, 191);
 }
+
 .juntos {
     background-color: rgb(225, 180, 252);
 }
@@ -67,9 +121,11 @@ td {
 
 /* formulario */
 form {
-    /* padding: 10%; */
-    margin: auto;
+    margin: 0 10px;
+    padding-left: 6%;
+    padding-bottom: 2%;
 }
+
 legend {
     text-align: center;
     border: 3px dotted purple;
@@ -77,19 +133,23 @@ legend {
     border-radius: 10px;
     padding: 0 10%;
 }
+
 label {
     display: inline-block;
     width: 15%;
 }
+
 fieldset {
     background-color: rgb(255, 206, 214);
     border: 3px solid purple;
     border-radius: 10px;
 }
+
 textarea {
     vertical-align: text-top;
     height: 100px;
 }
+
 input[type="text"],
 input[type="email"],
 input[type="date"],
@@ -98,18 +158,21 @@ textarea {
     display: inline-block;
     margin-bottom: 10px;
 }
+
 input[type=text]:hover {
     border: 4px dotted rgb(241, 123, 222);
 }
+
 input[type="text"],
 select,
 textarea {
     width: 75%;
     vertical-align: middle;
 }
-button[type=submit], button[type=reset] {
+
+button[type=submit],
+button[type=reset] {
     width: 40%;
     margin-left: 5%;
     cursor: pointer;
 }
-
