--- a/docs/style.css
+++ b/docs/style.css
@@ -4,21 +4,35 @@
 
 body {
     background-color: rgb(255, 186, 249);
-    width: 95%;
+    width: 100%;
     margin: 0;
 }
 
 .fondo {
-    background-image: url(https://i.pinimg.com/736x/4a/a9/bc/4aa9bcaca5f3e0c021282e4f95744fe4.jpg);
-    height: 10px;
-    padding: 20%;
+    background-image: url(https://scontent-mad1-1.xx.fbcdn.net/v/t39.30808-6/402027485_876666147184780_6017131208447181590_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=783fdb&_nc_ohc=2ZL73iqXJB0AX95fXMg&_nc_ht=scontent-mad1-1.xx&oh=00_AfCwi8DVZgn4KTMw7amKY7hq9dCxGoeOjP3ZpQOZ2LuGjw&oe=65B30CC6);
+    padding: 15%;
     background-size: cover;
-    margin: 0%;
-
+    margin: 0;
+    width: 100%;
 }
 
 h1 {
     text-align: top;
+    color: black;
+    font-size: 50px;
+    font-weight: 500 bold;
+    margin: auto;
+
+}
+a{ 
+    display: block;
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    margin: auto;
+}
+a:hover {
+    color: purple;
 }
 
 h2 {
@@ -33,23 +47,25 @@ p {
 
 div {
     display: inline-block;
-    padding: 0px;
     text-align: center;
+
 }
 
 figure {
     display: inline-block;
-    padding: 5%;
-    border: 5px dotted rgb(172, 108, 247);
+    border: 5px outset rgb(207, 74, 219);
     text-align: center;
+    width: 27%;
+    margin: 20px;
+
 }
 
 figcaption {
-    margin: 40px 100px;
+    margin: 10px 50px;
 }
 
 figure:hover {
-    color: rgb(189, 79, 233);
+    color: rgb(177, 22, 238);
 }
 
 
@@ -65,7 +81,7 @@ table {
 
 td,
 th {
-    border: 5px solid rgb(250, 250, 250);
+    border: 5px ridge rgb(247, 171, 209);
 }
 
 th {
@@ -121,9 +137,9 @@ td {
 
 /* formulario */
 form {
-    margin: 0 10px;
-    padding-left: 6%;
-    padding-bottom: 2%;
+    margin: 2% 5%;
+    padding: 0 10%;
+
 }
 
 legend {
