--- a/docs/style.css
+++ b/docs/style.css
@@ -25,14 +25,17 @@ h1 {
 
 }
 a{ 
-    display: block;
+    display: inline-block;
     text-decoration: none;
-    color: black;
+    color: rgb(235, 177, 177);
     font-size: 20px;
     margin: auto;
+    background-color: rgb(139, 5, 122);
+    border-radius: 5px;
+    padding: 5px;
 }
 a:hover {
-    color: purple;
+    color: rgb(224, 46, 114);
 }
 
 h2 {
